feat(project): add details on click

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel='stylesheet' href='bower_components/angular-material/angular-material.css' />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -57,6 +57,7 @@
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -65,7 +66,8 @@
         <script src="scripts/controllers/main.js"></script>
 				<script src="scripts/controllers/create-project.js"></script>
         <script src="scripts/controllers/header.js"></script>
-        <script src="scripts/controllers/projects.js"></script>
+				<script src="scripts/controllers/projects.js"></script>
+        <script src="scripts/controllers/project.js"></script>
         <script src="scripts/services/service-ajax.js"></script>
         <!-- endbuild -->
 </body>
